[gd_scene load_steps=7 format=3 uid="uid://cysp5xv0gmlxc"]

[ext_resource type="Script" uid="uid://cdybf1g46omoq" path="res://Scripts/Paddle.gd" id="1_j60bu"]
[ext_resource type="Texture2D" uid="uid://c0ixnboekkdpe" path="res://Resources/Textures/EB_GreenerWoodTexture_b1.png" id="2_mwvv4"]
[ext_resource type="Texture2D" uid="uid://dsg5lyuke0yhl" path="res://Resources/Textures/EB_GreyTexture_a1.png" id="3_uj2xe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j60bu"]
size = Vector2(1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_siir1"]

[sub_resource type="SphereMesh" id="SphereMesh_siir1"]

[node name="Paddle" type="Node2D"]
script = ExtResource("1_j60bu")

[node name="Origin" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="Origin"]
collision_layer = 4
collision_mask = 2
center_of_mass_mode = 1
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Origin/RigidBody2D"]
visible = false
position = Vector2(32, 0)
scale = Vector2(64, 16)
shape = SubResource("RectangleShape2D_j60bu")
one_way_collision = true
one_way_collision_margin = 4.0

[node name="DefaultPaddlePoly" type="MeshInstance2D" parent="Origin/RigidBody2D"]
visible = false
position = Vector2(32.0025, -0.00276504)
rotation = -1.5708
scale = Vector2(15.988, 64)
mesh = SubResource("QuadMesh_siir1")
texture = ExtResource("2_mwvv4")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Origin/RigidBody2D"]
visible = false
position = Vector2(1.19209e-07, 2.74181e-06)
scale = Vector2(16.0181, 16)
mesh = SubResource("SphereMesh_siir1")

[node name="RightPaddlePoly" type="Polygon2D" parent="Origin/RigidBody2D"]
visible = false
clip_children = 2
color = Color(0.881937, 0.881937, 0.881937, 1)
texture = ExtResource("3_uj2xe")
polygon = PackedVector2Array(0, -8, 64, -8, 59, 0, 0, 8, -8, 0)

[node name="Polygon2D" type="Polygon2D" parent="Origin/RigidBody2D/RightPaddlePoly"]
position = Vector2(0, -14)
texture = ExtResource("2_mwvv4")
polygon = PackedVector2Array(0, 10, 62, 10, 64, 6, 0, 6)

[node name="LeftPaddlePoly" type="Polygon2D" parent="Origin/RigidBody2D"]
visible = false
clip_children = 2
color = Color(0.882353, 0.882353, 0.882353, 1)
texture = ExtResource("3_uj2xe")
polygon = PackedVector2Array(0, -8, 59, 0, 64, 8, 0, 8, -8, 0)

[node name="Polygon2D" type="Polygon2D" parent="Origin/RigidBody2D/LeftPaddlePoly"]
texture = ExtResource("2_mwvv4")
polygon = PackedVector2Array(0, 8, 64, 8, 62, 4, 0, 4)
